# coco-ir

./: CMakeLists.txt  README.md  conanfile.py
coco/: CMakeLists.txt  irTools.cpp  irTools.hpp  nec.cpp  nec.hpp  nubert.cpp  nubert.hpp  rc6.cpp  rc6.hpp
coco/emu/coco/platform/: IrReceiver_emu.cpp  IrReceiver_emu.hpp
coco/stm32/coco/platform/: IrReceiver_TIM.cpp  IrReceiver_TIM.hpp
test/: CMakeLists.txt  IrReceiverTest.cpp  gTest.cpp
test/emu/: IrReceiverTest.hpp
test/nucleo-g431rb/: IrReceiverTest.hpp
test/nucleo-g474re/: IrReceiverTest.hpp
test/stm32g474nucleo/: IrReceiverTest.hpp
